<resources>
    <string name="app_name">好盒器|調度站 v0.3</string>
    <string name="title_activity_in_stock">InStock</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Page Title-->
    <string name="station_name">好盒器台南調度站</string>
    <string name="in_stock_page">庫存</string>
    <string name="to_deliver_page">待配送</string>
    <string name="delivery_history_page">出貨紀錄</string>
    <string name="to_sign_for_page">待簽收入庫</string>
    <string name="dispatch_history_page">調度紀錄</string>
    <string name="recycle_page">回收</string>
    <string name="recycle_history_page">回收紀錄</string>

    <!--SubPage Title-->
    <string name="choose_recycle_destination">選擇回收地點</string>

    <!--  -->
    <string name="choose_delivery_destination">選擇出貨地點</string>

    <!--Dialog Title-->
    <string name="dialog_title_sort">排序</string>
    <string name="title_choose_destination">選擇目的地</string>


    <!-- 容器功能 -->
    <string name="sign_for_store">代簽收</string>
    <string name="cancel_arrival">取消送達</string>
    <string name="cancel_delivery">取消配送</string>
    <string name="edit_delivery">修改</string>
    <string name="cancel_boxing">解除裝箱</string>
    <string name="edit_boxing">修改</string>
    <string name="to_deliver">出貨</string>
    <string name="return_to_stock">退回庫存</string>
    <string name="report">回報異常</string>
    <string name="sign_for">簽收</string>
    <string name="done_delivery">送達</string>

    <!-- 排序方式 -->
    <string name="sort_container_type">容器種類</string>
    <string name="sort_boxing_date_descending">裝箱日期↓(新到舊)</string>
    <string name="sort_boxing_date">裝箱日期↑(舊到新)</string>
    <string name="sort_store">店舖</string>
    <string name="sort_delivery_date_descending">出貨日期↓(新到舊)</string>
    <string name="sort_delivery_date">出貨日期↑(舊到新)</string>


    <!-- 頁面訊息 -->
    <string name="no_box_inside">目前沒有箱子</string>
    <string name="no_input_container_yet">尚未掃瞄任何容器</string>
    <string name="no_input_to_clean">沒有可清除的資料喔!</string>
    <string name="long_text_example">創建｜0963328359｜2021-01-25 15:32\n裝箱｜0963328359｜2021-01-25 15:32\n入庫｜0963328359｜2021-01-25 15:32</string>
    <string name="more_containerType">還有%1$d種貨品</string>

    <!-- some variables-->
    <string name="number_with_hashtag"># %1$d</string>
    <string name="number_with_hashtag_in_string"># %1$s</string>

    <!---->
    <string name="boxing_in_stock">庫存裝箱</string>
    <string name="finish_edit_box">修改裝箱完成｜%1$s</string>
    <string name="finish_boxing_in_stock">裝箱完成</string>
    <string name="test_name">%1$s</string>

    <!-- Search Hint -->
    <string name="input_hint_box_id_cup_id">箱子ID、容器ID…</string>
    <string name="input_hint_cup_id">容器ID…</string>
    <string name="input_hint_cup_id_store_name">容器ID、店舖名…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_version">version: beta v0.6</string>


</resources>